# robot_competition_gpsr

./: README.md
communication/xf_ros/: CMakeLists.txt  package.xml
communication/xf_ros/action/: HomeRecognize.action  TTS.action
communication/xf_ros/cfg/: GPSR.bnf  GPSR_ONE.bnf  call.bnf  gpsr_one.bnf  gpsr_question_bak.bnf  gpsr_three.bnf  guest.bnf  home.bnf  home_final.abnf  home_final.bnf  home_final_bak.bnf  home_generated.bnf  home_generated_confirmed.bnf  home_test.bnf  robot_bnf.bnf  robot_home.bnf  supermarket.bnf  test.abnf  xf.yaml
communication/xf_ros/include/xf/: linuxrec.h  msp_errors.h  speech_recognizer.h
communication/xf_ros/include/xf_ros/: asr.hpp  awaken.hpp
communication/xf_ros/launch/: asr.launch  asr_gpsr.launch  tts.launch
communication/xf_ros/res/asr/GrmBuild/: abzrgafa.d  aejrfhba.d  aenttgda.d  attdxkfa.d  aupnqgfa.d  auywbcea.d  axfcogca.d  bhrlmwba.d  braobmga.d  bzuswtaa.d  bzwvgfga.d  call.g  call_16K  cevswtaa.d  cjywguda.d  ckbrgpaa.d  csinekda.d  defbxaea.d  dhbthyba.d  dmnkupea.d  drwgbyaa.d  ejsxscga.d  eqtrbida.d  eufgltba.d  eusbfgca.d  ezncpcaa.d  fkjhksca.d  fqjeodaa.d  frkcbmda.d  fwjyhmba.d  gjcokuaa.d  gpsr_16K  gpsrmission.g  gpsrmission_16K  gswciiaa.d  guest_16K  gvumjdaa.d  gxonvzfa.d  havhikca.d  haydaaaa.d  (+88 more)
communication/xf_ros/res/asr/GrmBuild/temp/: aajqovca.d  ahsdixga.d  aouobkca.d  aprsgqaa.d  armxvtaa.d  asltckfa.d  awiscfda.d  axxpqtba.d  azrpakga.d  bagfvaca.d  bgpfczca.d  bhbmplea.d  blvsovda.d  brvqufaa.d  bwqnjdaa.d  bznbotea.d  cmfgavaa.d  corduada.d  dffrcxba.d  (+140 more)
communication/xf_ros/res/asr/GrmBuilld/: buqeggca.d  buydmefa.d  bzvskdaa.d  call.g  call_16K  dlevvpga.d  ellgyzfa.d  exkeaaaa.d  eycbaaaa.d  ffbeaaaa.d  fuikbfaa.d  gkxzziba.d  guest.g  gyiyvlca.d  halwttea.d  hbojnpfa.d  hnkbaaaa.d  hpqgogaa.d  ibmzivaa.d  ilfvwlaa.d  iwxbaaaa.d  ixvekwba.d  jmwkunfa.d  jwnodeaa.d  kkoxzjaa.d  kwyaaaaa.d  kxcktkca.d  ldojioba.d  lgazgpba.d  lsujjdaa.d  mmthwpaa.d  mvwifeba.d  pnmijdaa.d  pxhekwba.d  qmbkdqba.d  roaxhvba.d  rvdciaaa.d  sayqyvea.d  sutzidaa.d  ttwbssba.d  (+10 more)
communication/xf_ros/res/ivw/: wakeupresource.jet
communication/xf_ros/res/tts/: xiaofeng.jet  xiaoyan.jet
communication/xf_ros/src/: asr.cpp  asr_node.cpp  asr_online.cpp  awaken.cpp  roch_tts_client.py  roch_tts_server.cpp  roch_tts_smach.py  tcp_test.cpp  tts_node.cpp
communication/xf_ros/src/xf/: linuxrec.c  speech_recognizer.c
navigation/nav/nav_ros/: CMakeLists.txt  package.xml
navigation/nav/nav_ros/config/: D435.rviz  config.rviz  nav.rviz  nav_ros.rviz
navigation/nav/nav_ros/launch/: amcl_diff.launch  fake_nav.launch  move_base.launch  nav.launch  teb_move_base.launch  test_urdf.launch
navigation/nav/nav_ros/maps/: 0811.pgm  0811.yaml  0826.pgm  0826.yaml  0828.pgm  0828.yaml  0829.pgm  0829.yaml  map.pgm  map.yaml
navigation/nav/nav_ros/maps/bak/: map_20180808.pgm  map_20180808.yaml  map_20180812.pgm  map_20180812.yaml  map_20180812_original.pgm
navigation/nav/nav_ros/param/: arbotix.yaml  costmap_common_params.yaml  local_costmap_params.yaml  move_base_params.yaml  ros.yaml  teb_local_planner_params.yaml
navigation/nav/nav_ros/src/: keyboard_teleop.py
navigation/nav/nav_ros/urdf/: _d435.urdf.xacro  mrobot_body.urdf.xacro  mrobot_with_d435.urdf.xacro  my_robot.urdf.xacro  turtlebot_properties.urdf.xacro
perception/face_detector/facenet_ros/: CMakeLists.txt  package.xml  setup.py
perception/face_detector/facenet_ros/launch/: facenet_home.launch  facenet_home_original.launch  test.launch
perception/face_detector/facenet_ros/src/: __init__.py  facenet_home.py  facenet_home_node.py
perception/tracker/pysot_tracker/: CMakeLists.txt  package.xml  setup.py
perception/tracker/pysot_tracker/launch/: test_track.launch
perception/tracker/pysot_tracker/msg/: Box.msg
perception/tracker/pysot_tracker/src/: demo.py  test_track.py  track.py
robot/: CMakeLists.txt  package.xml  setup.py
robot/AIML/: get_temperature.py  get_time.py  get_weather.py
robot/AIML/datasets/: gpsr_basic.aiml  gpsr_brn.brn  gpsr_job.aiml  gpsr_question.aiml  gpsr_startup.xml  std-startup.xml  test_aiml.aiml  test_brn.brn
robot/launch/: D435.launch  aligned_pointcloud.launch  creat_pos.launch  gpsr_sm.launch  robot_sm.launch  save_image.launch  test_capture.launch  test_eye.launch  test_follow.launch  test_get_identify_face.launch  test_mouth_and_ear.launch  test_save_pos.launch
robot/src/: __init__.py  capture_sm.py  gpsr_sm.py  robot_sm.py  save_color_depth_img.py  save_pos_node.py
robot/src/body/: __init__.py  body.py
robot/src/body/communication/: __init__.py
robot/src/body/config/: config.py  gpsr.py
robot/src/body/control/: __init__.py  core.py
robot/src/body/grasp/: __init__.py
robot/src/body/memory/: __init__.py
robot/src/body/perception/: __init__.py
robot/src/body/walk/: __init__.py  core.py  transform_utils.py
robot/src/gpsr_sm/: __init__.py  back_init.py  find_people.py  get_job.py  get_obj.py  go_room.py  start_job.py
robot/src/sm/: __init__.py  back_init.py  find_people.py  init_robot.py  look_goods.py  meet_people.py  wait_door_open.py
robot/src/test/: test_aiml.py  test_capture.py  test_communication_node.py  test_follow_communication.py  test_follower.py  test_get_identify_face.py  test_get_pos.py  test_go_all_pos.py  test_make_pdf.py  test_odom.py  test_perception_node.py  test_torch.py  test_wait_door_open.py  test_walk.py
sensor/arm/kw_arm/: CMakeLists.txt  README.md  package.xml
sensor/arm/kw_arm/action/: MoveToPose.action
sensor/arm/kw_arm/include/kw_arm/: my_ik_solver.h
sensor/arm/kw_arm/launch/: fixed_motion.launch
sensor/arm/kw_arm/src/: FixedMotion.cpp  MoveToPose_client.cpp  MoveToPose_server.cpp  TargetPub.cpp  my_ik_solver.cpp
sensor/motor/motor_control_3dx/: CMakeLists.txt  package.xml
sensor/motor/motor_control_3dx/.kdev4/: motor_control.kdev4
sensor/motor/motor_control_3dx/launch/: start.launch  start_auto.launch
sensor/motor/motor_control_3dx/msg/: multi_range.msg  readDataAll.msg
sensor/motor/motor_control_3dx/src/: joystick.cpp  motor_driver_3dx.cpp
(+138 files in other folders)
