<?xml version="1.0"?>
<package>
  <name>robot</name>
  <version>0.0.1</version>
  <description>Home face recognition</description>
  <maintainer email="cccmorin@gmail.com">Lennon Woo</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <build_depend>facenet_ros</build_depend>
  <run_depend>facenet_ros</run_depend>
</package>
