<?xml version="1.0"?>
<package>
  <name>facenet_ros</name>
  <version>0.0.1</version>
  <description>Facenet face recognition</description>
  <maintainer email="cccmorin@gmail.com">Lennon Woo</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
